--- a/TMS/TMS/Areas/Technician/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Shared/_TopLayout.cshtml
@@ -19,7 +19,7 @@
             <nav class="navbar navbar-static-top">
                 <div class="container"  style="min-width: 900px">
                     <div class="navbar-header">
-                        <a href="/Home/Index" class="navbar-brand"><b>TMS</b></a>
+                        <a href="/Technician/Home" class="navbar-brand"><b>TMS</b></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
