--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
@@ -102,9 +102,19 @@
                                     <option value="2">Problem</option>
                                     <option value="3">Change</option>
                                 </select>
+                                <label class="control-label">MODE <font color="red">*</font></label>
+                                <select class="form-control" name="Mode">
+                                    <option value="@ConstantUtil.TicketMode.PhoneCall">@ConstantUtil.TicketModeString.PhoneCall</option>
+                                    <option value="@ConstantUtil.TicketMode.SocialNetwork">@ConstantUtil.TicketModeString.SocialNetwork</option>
+                                    <option value="@ConstantUtil.TicketMode.Forum">@ConstantUtil.TicketModeString.Forum</option>
+                                    <option value="@ConstantUtil.TicketMode.Other" selected>@ConstantUtil.TicketModeString.Other</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-12 col-xs-12">
                                 <label class="control-label">CATEGORY</label>
                                 <select class="form-control" name="CategoryId" data-role="ddl-category"></select>
-
                             </div>
                         </div>
                         <div class="row form-group">
@@ -150,7 +160,7 @@
                                 <label class="control-label">NOTE</label>
                             </div>
                             <div class="col-md-12 col-xs-12">
-                                <textarea class="form-control textarea" name="Note" placeholder="" rows="5"></textarea>
+                                @Html.TextAreaFor(m => m.Note, new { @class = "form-control textarea", placeholder = "Note", rows = "5" })
                             </div>
                         </div>
                         <div class="row form-group" style="text-align: center;">
