--- a/TMS/TMS/Areas/HelpDesk/Views/Profile/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Profile/Index.cshtml
@@ -2,13 +2,10 @@
 @model TMS.ViewModels.ProfileHelpdeskViewModel
 @{
     ViewBag.Title = "View Profile";
-    Layout = "~/Areas/Helpdesk/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Helpdesk/Views/Shared/_TopLayout.cshtml";
 }
-<style>
-    .profileInfo label {
-        text-align: right;
-    }
-</style>
+<link rel="stylesheet" type="text/css" href="~/Content/custom-css/profile.css">
+
 
 <div class="form-horizontal">
     <div class="row">
