--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml
@@ -12,35 +12,24 @@
     @Scripts.Render("~/bundles/modernizr")
     <title>@ViewBag.Title</title>
 </head>
-
 <!-- ADD THE CLASS layout-top-nav TO REMOVE THE SIDEBAR. -->
-<body class="hold-transition skin-green layout-top-nav">
+<body class="hold-transition skin-black layout-top-nav">
     <div class="wrapper">
         <header class="main-header">
             <nav class="navbar navbar-static-top">
                 <div class="container" style="min-width: 900px">
                     <div class="navbar-header">
-                        <a href="/Home/Index" class="navbar-brand"><b>TMS</b></a>
+                        <a href="/Technician/Home" class="navbar-brand"><b>TMS</b></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="@Html.Raw((controllerName == "Ticket") ? "active" : "")"><a href="/Ticket">Ticket</a></li>
-                            <li class="@Html.Raw((controllerName == "FAQ") ? "active" : "")"><a href="/FAQ">FAQ</a></li>
-                            <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")"><a href="/Profile">My profile</a></li>
-                            @*<li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Separated link</a></li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">One more separated link</a></li>
-                                    </ul>
-                                </li>*@
+                            <li class="@Html.Raw((controllerName == "ManageTicket") ? "active" : "")"><a href="/Helpdesk/ManageTicket">Ticket</a></li>
+                            <li class="@Html.Raw((controllerName == "KnowledgeBase") ? "active" : "")"><a href="/KnowledgeBase">Knowledge Base</a></li>
+                            <li class="@Html.Raw((controllerName == "BusinessRule") ? "active" : "")"><a href="/KnowledgeBase">Business Rules</a></li>
+                            <li class="@Html.Raw((controllerName == "Report") ? "active" : "")"><a href="/KnowledgeBase">Report</a></li>
+                            <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")"><a href="/Helpdesk/Profile">My profile</a></li>
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
@@ -94,7 +83,7 @@
                                         <div class="pull-right">
                                             @using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
                                             {
-                                            @Html.AntiForgeryToken()
+                                                @Html.AntiForgeryToken()
                                             }
                                             <a href="javascript:document.getElementById('logoutForm').submit()" class="btn btn-default btn-flat">Sign out</a>
                                         </div>
@@ -109,7 +98,7 @@
             </nav>
         </header>
         <!-- Full Width Column -->
-        <div class="content-wrapper bg-light-green">
+        <div class="content-wrapper bg-gray-light">
             <div class="container" style="min-width: 900px; padding-top: 20px">
                 @RenderBody()
                 <!-- /.content -->
@@ -117,11 +106,11 @@
             <!-- /.container -->
         </div>
         <!-- /.content-wrapper -->
-        <footer class="main-footer bg-green">
+        <footer class="main-footer" style="color: #2a2a2a !important">
             <div class="pull-right hidden-xs">
                 <b>Version</b> 1.1.1
             </div>
-            <strong>Copyright &copy; 2016-2016 <a href="http://tms.com">Group 4</a>.</strong> All rights
+            <strong>Copyright &copy; 2016-2017 <a href="http://tms.com" style="color: #2a2a2a !important">Group 4</a>.</strong> All rights
             reserved.
         </footer>
     </div>
