--- a/TMS/TMS/Areas/Technician/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Shared/_TopLayout.cshtml
@@ -17,7 +17,7 @@
     <div class="wrapper">
         <header class="main-header">
             <nav class="navbar navbar-static-top">
-                <div class="container"  style="min-width: 900px">
+                <div class="container" style="min-width: 900px">
                     <div class="navbar-header">
                         <a href="/Technician/Home" class="navbar-brand"><b>TMS</b></a>
                     </div>
@@ -27,7 +27,7 @@
                         <ul class="nav navbar-nav">
                             <li class="@Html.Raw((controllerName == "ManageTicket") ? "active" : "")"><a href="/Technician/ManageTicket">Ticket</a></li>
                             <li class="@Html.Raw((controllerName == "KnowledgeBase") ? "active" : "")"><a href="/KnowledgeBase">Knowledge Base</a></li>
-                            <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")" ><a href="/Profile">My profile</a></li>
+                            <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")"><a href="/Technician/Profile">My profile</a></li>
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
@@ -96,7 +96,7 @@
             </nav>
         </header>
         <!-- Full Width Column -->
-        <div class="content-wrapper" >
+        <div class="content-wrapper bg-lighter-purple">
             <div class="container" style="min-width: 900px; padding-top: 20px">
                 @RenderBody()
                 <!-- /.content -->
@@ -104,7 +104,7 @@
             <!-- /.container -->
         </div>
         <!-- /.content-wrapper -->
-        <footer class="main-footer">
+        <footer class="main-footer bg-purple">
             <div class="pull-right hidden-xs">
                 <b>Version</b> 1.1.1
             </div>
