--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -121,7 +121,7 @@
         <!-- /.modal-dialog -->
     </div>
 
-    <div id="detail-modal" class="modal fade" role="dialog">
+    <div id="detail-modal" class="modal" role="dialog">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -347,6 +347,11 @@
                             <li>
                                 <a id="action-history-btn">
                                     <i class="fa fa-history" aria-hidden="true"></i> Ticket History
+                                </a>
+                            </li>
+                            <li>
+                                <a id="action-detail-btn">
+                                    <i class="fa fa-info-circle" aria-hidden="true"></i> Ticket Detail
                                 </a>
                             </li>
                             <li>
