--- a/TMS/TMS/Views/Account/Login.cshtml
+++ b/TMS/TMS/Views/Account/Login.cshtml
@@ -50,7 +50,7 @@
             <form id="forget-password-form" class="form-horizontal">
                 <div class="form-group">
                     <div class="col-md-10">
-                        <input type="text" id="forget-email" class="form-control" placeholder="Email"/>
+                        <input type="text" id="forget-email" class="form-control" placeholder="Email" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -66,7 +66,7 @@
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/jqueryval")
-<script src="~/Scripts/notify.min.js"></script>
+<script src="~/Content/js/jquery.noty.packaged.js"></script>
 <script>
     $('.message a').click(function () {
         $('form').animate({ height: "toggle", opacity: "toggle" }, "slow");
@@ -98,7 +98,7 @@
                         layout: "topRight",
                         timeout: 2000
                     });
-                                   }
+                }
             },
             error: function () {
                 noty({
