--- a/TMS/TMS/Views/Profile/ChangePassword.cshtml
+++ b/TMS/TMS/Views/Profile/ChangePassword.cshtml
@@ -1,7 +1,25 @@
 ﻿@model TMS.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    switch ((string)ViewBag.Role)
+    {
+        case "admin":
+            Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+            break;
+        case "helpdesk":
+            Layout = "~/Areas/Helpdesk/Views/Shared/_Layout.cshtml";
+            break;
+        case "technician":
+            Layout = "~/Areas/Technician/Views/Shared/_Layout.cshtml";
+            break;
+        case "manager":
+            Layout = "~/Areas/Manager/Views/Shared/_Layout.cshtml";
+            break;
+        case "requester":
+            Layout = "~/Views/Shared/_TopLayout.cshtml";
+            break;
+    }
+
 }
 
 @using (Html.BeginForm("ChangePassword", "Profile", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -45,9 +63,12 @@
                                     case "technician":
                                         @Html.ActionLink("Cancel", "Index", new { area = "Technician" }, new { @class = "btn btn-default" })
                                         break;
+                                    case "manager":
+                                        @Html.ActionLink("Cancel", "Index", new { area = "Manager" }, new { @class = "btn btn-default" })
+                                        break;
                                     case "requester":
                                         @Html.ActionLink("Cancel", "Index", new { area = "" }, new { @class = "btn btn-default" })
-                                        break;
+                                        break;                                   
                                 }
                             </div>
                         </div>
