--- a/TMS/TMS/Areas/Manager/Views/ManageSC/Priority.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/ManageSC/Priority.cshtml
@@ -42,12 +42,12 @@
                 <h4 class="modal-title">Priority</h4>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal">
+                <div class="form-horizontal">
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Name&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" placeholder="Name" id="name-txt">
-                            <p id="name-validation-message" class="text-danger" style="display: none"></p>
+
                         </div>
                     </div>
                     <div class="form-group">
@@ -56,7 +56,12 @@
                             <textarea class="form-control" rows="3" placeholder="Description" id="description-txt"></textarea>
                         </div>
                     </div>
-                </form>
+                    <div class="form-group">
+                        <div class="col-lg-offset-2 col-sm-10">
+                            <p id="name-validation-message" class="text-danger" style="display: none"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-success" id="create-btn" onclick="createPriority()">Save</button>
@@ -146,57 +151,45 @@
         };
 
         var createPriority = function () {
-            var name = $("#name-txt").val();
-            if (name.trim() === "") {
-                $("#name-validation-message").html("Name is requried!");
-                $("#name-validation-message").show();
-            } else if (name.trim().length < 4) {
-                $("#name-validation-message").html("Name must be longer than 4 characters!");
-                $("#name-validation-message").show();
-            } else {
-                $.ajax({
-                    url: "/Manager/ManageSC/CreatePriority",
-                    dataType: "json",
-                    type: "POST",
-                    data: {
-                        name: $("#name-txt").val(),
-                        description: $("#description-txt").val()
-                    },
-                    success: function (data) {
-                        if (data.success) {
-                            noty({
-                                text: data.message,
-                                layout: "topCenter",
-                                type: "success",
-                                timeout: 2000
-                            });
-                            $("#myModal").modal("hide");
-                            reloadDataTable();
-                        } else {
-                            if (data.error) {
-                                noty({
-                                    text: data.message,
-                                    type: "error",
-                                    layout: "topRight",
-                                    timeout: 2000
-                                });
-                            } else {
-                                $("#name-validation-message").html(data.message);
-                                $("#name-validation-message").show();
-                            }
-                        }
-                    },
-                    error: function () {
+            $.ajax({
+                url: "/Manager/ManageSC/CreatePriority",
+                dataType: "json",
+                type: "POST",
+                data: {
+                    name: $("#name-txt").val(),
+                    description: $("#description-txt").val()
+                },
+                success: function (data) {
+                    if (data.success) {
                         noty({
-                            text: "Cannot connect to server!",
-                            layout: "topRight",
+                            text: data.message,
+                            layout: "topCenter",
+                            type: "success",
+                            timeout: 2000
+                        });
+                        $("#myModal").modal("hide");
+                        reloadDataTable();
+                    } else {
+                        $("#name-validation-message").html(data.message);
+                        $("#name-validation-message").show();
+                        noty({
+                            text: data.message,
                             type: "error",
+                            layout: "topRight",
                             timeout: 2000
                         });
                     }
-                });
-            }
-        };
+                },
+                error: function () {
+                    noty({
+                        text: "Cannot connect to server!",
+                        layout: "topRight",
+                        type: "error",
+                        timeout: 2000
+                    });
+                }
+            });
+        }
 
         var getPriorityDetail = function (id) {
             clearModal();
@@ -233,63 +226,49 @@
                     });
                 }
             });
-        };
+        }
 
         var editPriority = function (id) {
-            var name = $("#name-txt").val();
-            if (name.trim() === "") {
-                $("#name-validation-message").html("Name is required");
-                $("#name-validation-message").show();
-            } else if (name.trim().length < 4) {
-                $("#name-validation-message").html("Name must be longer than 4 characters! ");
-                $("#name-validation-message").show();
-            } else {
-                //ajax syntax
-                $.ajax(
-                {
-                    url: "/Manager/ManageSC/EditPriority",
-                    dataType: "json",
-                    type: "POST",
-                    data: {
-                        id: id,
-                        name: $("#name-txt").val(),
-                        description: $("#description-txt").val()
-                    },
-                    success: function (data) {
-                        if (data.success) {
-                            noty({
-                                text: data.message,
-                                layout: "topCenter",
-                                type: "success",
-                                timeout: 2000
-                            });
-                            $("#myModal").modal("hide");
-                            reloadDataTable();
-                        } else {
-                            if (data.error) {
-                                noty({
-                                    text: data.message,
-                                    type: "error",
-                                    layout: "topRight",
-                                    timeout: 2000
-                                });
-                            } else if (!data.error) {
-                                $("#name-validation-message").html(data.message);
-                                $("#name-validation-message").show();
-                            }
-                        }
-                    },
-                    error: function () {
+            $.ajax({
+                url: "/Manager/ManageSC/EditPriority",
+                dataType: "json",
+                type: "POST",
+                data: {
+                    id: id,
+                    name: $("#name-txt").val(),
+                    description: $("#description-txt").val()
+                },
+                success: function (data) {
+                    if (data.success) {
                         noty({
-                            text: "Cannot connect to server!",
-                            layout: "topRight",
+                            text: data.message,
+                            layout: "topCenter",
+                            type: "success",
+                            timeout: 2000
+                        });
+                        $("#myModal").modal("hide");
+                        reloadDataTable();
+                    } else {
+                        $("#name-validation-message").html(data.message);
+                        $("#name-validation-message").show();
+                        noty({
+                            text: data.message,
                             type: "error",
+                            layout: "topRight",
                             timeout: 2000
                         });
                     }
-                });
-            }
-        };
+                },
+                error: function () {
+                    noty({
+                        text: "Cannot connect to server!",
+                        layout: "topRight",
+                        type: "error",
+                        timeout: 2000
+                    });
+                }
+            });
+        }
 
         var showDeleteModal = function (id) {
             $("#yes-btn").attr("onclick", "deletePriority('" + id + "')");
@@ -312,7 +291,7 @@
                         });
                         $("#delete-modal").modal("hide");
                         reloadDataTable();
-                    } else if (!data.success) {
+                    } else {
                         noty({
                             text: data.message,
                             type: "error",
@@ -324,7 +303,7 @@
                 },
                 error: function () {
                     noty({
-                        text: data.message,
+                        text: "Cannot connect to server!",
                         type: "error",
                         layout: "topRight",
                         timeout: 2000
